--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
